force-app/main/default/objects/Handover_Item__c/Handover_Item__c.object-meta.xml
<CustomObject>
    <description>Checklist items used during installation handover. Template records define the standard checklist.</description>
    <label>Handover Item</label>
    <nameField>
        <displayFormat>HI-{0000}</displayFormat>
        <label>Handover Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handover Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>