force-app/main/default/objects/Handover_Item__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Stable identifier used to deploy and upsert handover checklist reference items.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>