force-app/main/default/objects/Handover_Item__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Installation to which this handover checklist item belongs. Template items intentionally leave this blank.</description>
    <label>Installation</label>
    <referenceTo>Installation__c</referenceTo>
    <relationshipLabel>Handover Items</relationshipLabel>
    <relationshipName>Handover_Items</relationshipName>
    <type>Lookup</type>
</CustomField>