force-app/main/default/objects/Handover_Item__c/fields/Is_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this handover checklist item has been completed.</description>
    <label>Is Done</label>
    <type>Checkbox</type>
</CustomField>