force-app/main/default/objects/Handover_Item__c/fields/Is_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies a reference checklist item used as a template for installations.</description>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>