force-app/main/default/objects/Handover_Item__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Checklist instruction displayed to the planner or delivery team.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>