force-app/main/default/objects/Handover_Item__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Display order of the handover checklist item.</description>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>